# email-cleaning

./: .gitignore  Makefile  main.py  pyproject.toml
src/emails/: main.py  mbox_reader.py
