[project]
name = "email-cleaning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mypy>=1.15.0",
    "ruff>=0.11.7",
    "tqdm>=4.67.1",
    "types-tqdm>=4.67.0.20250417",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/emails"]

[project.scripts]
main = "emails.main:main"

[tool.ruff.lint]
preview = true
extend-select = [
    "ARG",
    "E",
    "F",
    "I",
    "Q",
    "RUF",
    "W",
]

[tool.mypy]
files = ["src/"]
